--- a/.github/workflows/scans.yml
+++ b/.github/workflows/scans.yml
@@ -9,13 +9,14 @@ on:
 
 jobs:
 
-  tfsec-dev:
+  tfsec:
     name: tfsec
     uses: ./.github/workflows/tfsec.yml
     with:
       ENVIRONMENT: pull-request
       TARGET_PATH: src
-  terraform-dev:
+
+  terraform:
     name: terraform
     uses: ./.github/workflows/terraform_validate.yml
     with:
@@ -23,4 +24,20 @@ jobs:
       TERRAFORM_VERSION: '1.4.6'
       TARGET_PATH: src
     secrets:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
+
+  terratest:
+    name: terratest
+    uses: ./.github/workflows/terratest.yml
+    with:
+      ENVIRONMENT: testing
+      TERRAFORM_VERSION: '1.4.6'
+      TIMEOUT: 15m
+      FUNCTION: TestAwsEc2
+      AWS_DEFAULT_REGION: ap-southeast-1
+    secrets:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
