--- a/.github/workflows/terraform_validate.yml
+++ b/.github/workflows/terraform_validate.yml
@@ -13,6 +13,10 @@ on:
         required: true
         type: string
     secrets:
+      AWS_ACCESS_KEY_ID:
+        required: true
+      AWS_SECRET_ACCESS_KEY:
+        required: true
       TF_API_TOKEN:
         required: true
 
@@ -50,3 +54,6 @@ jobs:
       - name: Terraform Plan
         id: plan
         run: terraform plan
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
